# AI_Broker

./: .coverage  .gitignore  AI_Broker_consenso_multi_LLM.md  Agent_AI_Broker.md  Deployment_Guide.md  README.md  arrancar_ai_broker.bat  broker_config.yaml  broker_config.yaml.bak  design-qa.md  estado_ai_broker.bat  parar_ai_broker.bat  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  admin_auth.py  artifacts.py  config.py  coordinator.py  dashboard.py  dashboard_filters.py  dashboard_forms.py  dashboard_web.py  db.py  dispatcher.py  health.py  logging_config.py  main.py  maintenance.py  model_catalog.py  model_enrichment.py  model_stats.py  prompt_compressor.py  providers.py  repository.py  resource_scheduler.py  sandbox.py  schemas.py  skills.py  startup.py  strategy_router.py  task_classifier.py
app/ingestion/: __init__.py  detection.py  engines.py  service.py
app/providers/: __init__.py  base.py  bootstrap.py  deepseek.py  huggingface.py  ollama.py  openai_compatible.py  routing.py
app/static/: dashboard.css  dashboard.js
app/templates/: base.html  comparison.html  config.html  dashboard.html  files.html  login.html  models.html  prompt_tester.html  routing.html  task_detail.html  tasks.html
app/templates/fragments/: active.html  config.html  files_table.html  health.html  history.html  queue.html  queue_preview.html  resources.html  summary.html  task_detail_body.html  task_status.html
deprecated/: README.md  providers.py
docs/: Informe de decisión sobre los modelos de Ollama.docx  Mixture_Slow_Concurrency.md  Phase_3_Providers.md  Phase_4_Inference.md  Phase_5_Dashboard.md  Phase_5_Read_Models.md  Phase_6_Operations.md  Phase_7_File_Ingestion.md  Phase_8_Sandbox.md  Prompt_Compression.md  Prompt_Tester.md  deep-research-report.md
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
sandbox/: Dockerfile
scripts/: backfill_task_type.py  backup_state.py  check_readiness.py  configure_firewall_lan.ps1  install_windows_service.ps1  preview_dashboard.py  run_broker.py  uninstall_windows_service.ps1
tests/: test_adaptive_routing.py  test_agent_strategy.py  test_api.py  test_contract.py  test_dashboard_forms.py  test_dispatcher_and_startup.py  test_huggingface_local.py  test_ingestion.py  test_ingestion_corpus.py  test_long_context.py  test_model_catalog.py  test_model_enrichment.py  test_phase_four_inference.py  test_prompt_compressor.py  test_providers.py  test_sandbox.py  test_strategy_router.py  test_task_classifier.py
tests/fixtures/ingestion/: informe.docx  notas.md  ventas.csv
