[project]
name = "ai-broker"
version = "0.1.0"
description = "Durable AI Broker gateway with FastAPI, SQLite and adaptive execution contracts."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.4",
    "keyring>=25.0.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0.1",
    "structlog>=24.1.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]
hf-local = [
    "accelerate>=0.31.0",
    "torch>=2.3.0",
    "transformers>=4.42.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = [".local", ".venv", "docs"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = [
    "E501",  # líneas largas heredadas; el formateo no se fuerza retroactivamente
]

[tool.mypy]
python_version = "3.10"
files = ["app"]
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = false
warn_redundant_casts = true
no_implicit_optional = true

# dashboard_web es codigo legacy de UI pendiente de refactor; se relajan los
# codigos ruidosos hasta trocearlo en modulos tipados.
[[tool.mypy.overrides]]
module = "app.dashboard_web"
disable_error_code = [
    "arg-type",
    "assignment",
    "dict-item",
    "index",
    "operator",
    "union-attr",
    "var-annotated",
]

