[project]
name = "ai-broker"
version = "0.1.0"
description = "Durable AI Broker gateway with FastAPI, SQLite and adaptive execution contracts."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.4",
    "keyring>=25.0.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0.1",
    "structlog>=24.1.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]
hf-local = [
    "accelerate>=0.31.0",
    "torch>=2.3.0",
    "transformers>=4.42.0",
]

# Sin esta lista setuptools intenta auto-descubrir paquetes y aborta porque la
# raíz tiene varios directorios candidatos (graphify-out, state, logs, docs...):
# `pip install -e .` fallaba con "Multiple top-level packages discovered".
[tool.setuptools.packages.find]
include = ["app", "app.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

# Medición de cobertura: `pytest --cov=app --cov-report=term-missing`.
# No se fuerza en cada ejecución local para no ralentizar el ciclo de
# desarrollo; el CI la exige con el umbral de abajo.
[tool.coverage.run]
source = ["app"]

[tool.coverage.report]
show_missing = true
# Umbral mínimo: el CI falla si la cobertura total cae por debajo.
fail_under = 90

[tool.ruff]
line-length = 120
target-version = "py310"
# "deprecated" guarda código legado fuera de uso (p. ej. el antiguo
# app/providers.py monolítico): no se lintéa ni se importa.
extend-exclude = [".local", ".venv", "docs", "deprecated"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = [
    "E501",  # líneas largas heredadas; el formateo no se fuerza retroactivamente
]

[tool.mypy]
python_version = "3.10"
files = ["app"]
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = false
warn_redundant_casts = true
no_implicit_optional = true

# El parseo de formularios HTML (str -> tipos de config) es inherentemente
# dinámico; el override queda acotado a ese módulo. El resto del panel
# (app.dashboard_web) se chequea con la configuración completa.
[[tool.mypy.overrides]]
module = "app.dashboard_forms"
disable_error_code = [
    "arg-type",
    "assignment",
    "dict-item",
    "index",
    "operator",
    "union-attr",
    "var-annotated",
]

